# smart-image-renamer

./: .pre-commit-config.yaml  pyproject.toml  setup.py  smart-image-renamer.py
