[tool.poetry]
name = "smart-image-renamer"
version = "0.4.0"
description = "A script to intelligently bulk rename images using EXIF data contained within."
authors = ["Ronak Gandhi <ronak.gandhi@ronakg.com>"]
license = "GPLv2"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
